@@ -82,3 +82,4 @@
 20231024 ./watchlist/hia-parse-proxy.sh updated.
 20231024 ./watchlist/hia-parse-ssh.sh updated.
 20231024 ./watchlist/hia-parse-ssl.sh updated.
+20231024 ./watchlist/clean.sh added.
